kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teaching
  labels:
    security-zone: teaching
---
apiVersion: v1
kind: Namespace
metadata:
  name: research
  labels:
    security-zone: research
---
apiVersion: v1
kind: Namespace
metadata:
  name: student-services
  labels:
    security-zone: student-services
